[level 2] Title: 전화번호 목록, Time: 268.04 ms, Memory: 243 MB -BaekjoonHub